<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dgyou.valuesconverter.KmToMilesActivity"
    android:useDefaultMargins="true"
    android:columnCount="2"
    android:rowCount="3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/km_label"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="center_vertical|left" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/kmEditText"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:digits="0123456789"
        android:maxLength="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/kmTextView"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mile_label"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="center_vertical|left"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/mileEditText"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="fill_horizontal"
        android:digits="0123456789"
        android:maxLength="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/mileTextView"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="fill_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/kmSaveButton"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2" />

</GridLayout>
